--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load staticfiles %} <!-- New line -->
+
 <html>
 
 	<head> 
@@ -11,8 +14,11 @@
 			hey there partner! <br />
 			<strong>{{ boldmessage }}</strong><br /> 
 		</div>
+
 		<div>
 			<a href="/rango/about/">About</a><br />
+			<img src="{% static "images/rango.jpg" %}"
+				alt="Picture of Rango" /> <!-- New line -->
 		</div> 
 	</body>
 	
