--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,16 +5,23 @@
 <html>
 
 	<head> 
-		<title>About Page</title>
+		<h1>About Page</h1>
 	</head>
 
 	<body>
-        <h1>About Page</h1>
-        This tutorial has been put together by Martha Garman 
-        <img src="{{ MEDIA_URL}}cat.jpg" />
-        
+        <div> This is the about page.
+        <strong>This tutorial has been put together by Martha Garman. </strong>
+        </div>
+
+        <div> #images below
         <a href="/rango/">Home</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+        <img src="{% static "images/rango.jpg" %}" 
+            alt="Picture of Rango" /> 
+
+        <img src="{{ MEDIA_URL}}cat.jpg" 
+            alt="Picture of a cat"/>
+        </div>
+
     </body>
 	
 </html>
