--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,17 +9,16 @@
 	</head>
 
 	<body>
-        <div> This is the about page.
-        <strong>This tutorial has been put together by Martha Garman. </strong>
+        <div> 
+        This tutorial has been put together by Martha Garman. 
         </div>
 
-        <div> #images below
+        <div> 
         <a href="/rango/">Home</a><br />
         <img src="{% static "images/rango.jpg" %}" 
             alt="Picture of Rango" /> 
 
-        <img src="{{ MEDIA_URL}}cat.jpg" 
-            alt="Picture of a cat"/>
+        <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat"/>
         </div>
 
     </body>
