End of Chapter 8
-Added coupling between url and templates

--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-    <html>
-        <head>
-            <title>Rango - Add Page</title>
-        </head>
-        <body>
+
+
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add Page
+{% endblock %}
+    
+{% block body_block %}
+    <div>
+        <h1>Rango - Add Page</h1>
+    
             {% if category %}
             
-            <h1>Add a Page to {{category.name}}</h1>
+            <h2>Add a Page to {{category.name}}</h2>
             <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
@@ -23,8 +30,8 @@
             {% else %}
                 The specified category does not exist!
             {% endif%}
-            
-        </body>
-    </html>
+    </div>  
+    
+{% endblock %}
         
         
