--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
 
-{% load staticfiles %} <!-- New line -->
+{% extends 'rango/base.html' %}
+    {% load staticfiles %}
+    {% block title_block %}
+        About Page
+    {% endblock %}
+    
+    {% block body_block %}
+        <div>
+            <h1 class="page-header">About Page</h1>         
+            This tutorial has been put together by Martha Garman.
+        </div>  
+        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+        <p>
+        <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat.">
+        <p>
+    </p>
+    <hr>
 
-<html>
-
-	<head> 
-		<h1>About Page</h1>
-	</head>
-
-	<body>
-        <div> 
-        This tutorial has been put together by Martha Garman. 
-        </div>
-
-        <div> 
-        <a href="/rango/">Home</a><br />
-        <img src="{% static "images/rango.jpg" %}" 
-            alt="Picture of Rango" /> 
-
-        <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat"/>
-        </div>
-
-    </body>
-	
-</html>
+    {% endblock %}
