--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,6 +14,7 @@
         <p>
         <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat.">
         <p>
+        <p>visits: {{ visits }}</p>
     </p>
     <hr>
 
