Update: Fix Errors
- Fixed Base.html so that categories are only added for registered users
- fixed index views

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,8 +7,11 @@
     
     {% block body_block %}
         <div>
-            <h1 class="page-header">About Page</h1>         
+            <h1 class="page-header">About Page</h1>   
+            Rango says here is the about page  
+            <p>    
             This tutorial has been put together by Martha Garman.
+        </p>
         </div>  
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
         <p>
