--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -42,11 +42,8 @@
 	             <strong>There are no categories present.</strong>
 	       	  		{% endif %}
 			</div>
-			
-        <a href="/rango/add_category/">Add a New Category</a><br />
-        <a href="/rango/about/">About Rango</a><br />
         <img src="{% static "images/rango.jpg" %}" 
         	alt="Picture of Rango" /> 
-        
+        <p>visits: {{ visits }}</p>
 		
 	{% endblock %}
