--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -1,5 +1,5 @@
 {% extends 'rango/base.html' %}
-{% load static %}
+{% load staticfiles %}
 
 {% block title_block %}
     Register
@@ -8,7 +8,7 @@
 {% block body_block %}
     <h1> Register for Rango</h1>
     {% if registered %}
-        Rango says: <strong>thank you for registering!</strong>
+         Rango says: <strong>thank you for registering!</strong>
         <a href="{% url 'index' %}">Return to the homepage.</a>
     {% else %}
         Rango says: <strong>register here!</strong><br />
